Small styling fixes. Spacing between buttons and checkbox.

--- a/manoseimas/compatibility_test/client/styles/views/topic.css
+++ b/manoseimas/compatibility_test/client/styles/views/topic.css
@@ -21,6 +21,10 @@
 .actions {
   margin-top: 20px;
   position: relative;
+
+  @media(max-width: 768px) {
+    margin-bottom: 15px;
+  }
 }
 
 .absolute {
